--- a/css/main.css
+++ b/css/main.css
@@ -2,22 +2,18 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 }
 
-container {
-    width: 100%;
-}
-
-.header,
-.slider {
-    width: 100%;
-    background-color: #eeeeee;
-}
-
-.content {
+.container {
     width: 80%;
     max-width: 1280px;
     margin: 0 auto;
+}
+
+.header,
+#slider {
+    background-color: #eeeeee;
 }
 
 .header-content {
@@ -38,7 +34,6 @@ container {
     background-color: #ff6666;
     width: max-content;
     text-transform: uppercase;
-    font-size: 16px;
 }
 
 .button:hover{
@@ -48,7 +43,6 @@ container {
 .header-content .navigation_item .menu-link {
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 16px;
     color: black;
     margin: 0 23.5px;
 }
@@ -99,15 +93,15 @@ container {
     max-width: 400px;
     margin-top: 62px;
     text-align: left;
+    z-index: 2;
 }
 
 .slider-content-text h2 {
-    font-size: 55px;
+    font-size: 3.4375em;
     margin-bottom: 30px;
 }
 
 .slider-content-text p {
-    font-size: 16px;
     margin-bottom: 45px;
 }
 
@@ -148,12 +142,8 @@ container {
 
 .services-content_text h2 {
     text-transform: uppercase;
-    font-size: 24px;
+    font-size: 1.5em;
     font-weight: bold;
-}
-
-.services-content_text p {
-    font-size: 16px;
 }
 
 .services-content-button {
@@ -194,12 +184,8 @@ container {
 }
 
 .about-content_block h2{
-    font-size: 45px;
+    font-size: 2.81em;
     margin-bottom: 40px;
-}
-
-.about-content_block p{
-    font-size: 16px;
 }
 
 .about-content_block .orders{
@@ -207,13 +193,12 @@ container {
     line-height: 40px;
 }
 .about-content_block .orders h3{
-    font-size: 16px;
     font-weight: bold;
 }
 
 .about-content_block .line_orders{
     color: red;
-    font-size: 20px;
+    font-size: 1.25em;
 }
 
 .about-content_block-image{
@@ -224,7 +209,6 @@ container {
     max-width: 370px;
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-template-rows: minmax(35px auto);
     grid-gap:25px;
     margin-left: auto;
 }
@@ -233,14 +217,13 @@ container {
     grid-column-start: 1;
     grid-column-end: 4;
     font-weight: bold;
-    font-size: 16px;
     text-transform: uppercase;
     text-align: center;
 }
 
 .about-content-numbers .number p{
     font-weight: bold;
-    font-size: 45px;
+    font-size: 2.81em;
     text-transform: uppercase;
 }
 
@@ -268,12 +251,18 @@ container {
     position: relative;
 }
 
+.contacts iframe{
+    width: 100%;
+    height: 450px;
+    border: none;
+}
+
 .contacts_form {
     padding: 50px 50px 70px;
     background-color: white;
     position: absolute;
     top: 10%;
-    left: 10%;
+    left: 15%;
 }
 
 .contacts_form-text {
@@ -283,13 +272,12 @@ container {
 
 .contacts_form h2 {
     font-weight: bold;
-    font-size: 18px;
+    font-size: 1.12em;
     text-transform: uppercase;
     margin-bottom: 30px;
 }
 
 .contacts_form p {
-    font-size: 16px;
     color: #666666;
 }
 
@@ -356,12 +344,8 @@ container {
 }
 
 .footer-text h2 {
-    font-size: 36px;
+    font-size: 2.25em;
     font-weight: bold;
     margin-bottom: 20px;
-}
-
-.footer-text p {
-    font-size: 16px;
 }
 
