--- a/css/media.css
+++ b/css/media.css
@@ -13,13 +13,17 @@
         display: none;
         flex-direction: column;
         justify-content: center;
-        width: 30%;
+        width: 50%;
         padding: 3%;
         right: 0;
         top: 70%;
         text-align: center;
         background-color: #666666;
         z-index: 50;
+    }
+
+    .menu-link {
+        margin: 0;
     }
 
     .navigation_item a {
@@ -150,6 +154,6 @@
 
 @media screen and (max-width: 320px){
     .navigation_cart{
-        right: 10%;
+        right: 20%;
     }
 }
