--- a/css/media.css
+++ b/css/media.css
@@ -107,6 +107,7 @@
     .footer .icons,
     .footer-text{
         margin: 0 auto;
+        text-align: center;
     }
 }
 
@@ -118,6 +119,7 @@
 
     .footer-text{
         margin-top: 20px;
+        text-align: center;
     }
 
     .contacts_form{
